# python_backend

./: .dockerignore  .gitignore  Dockerfile  Procfile  Readme.md  docker-compose.yaml  env.example  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
hello_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  views.py
