[tool.poetry]
name = "hellosite"
version = "0.1.0"
description = ""
authors = ["wildmaus"]

[tool.poetry.dependencies]
python = "^3.7"
django = "4.1.3"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"